--- a/transflower-bootstrap/about.html
+++ b/transflower-bootstrap/about.html
@@ -98,11 +98,39 @@
     </div>
   </div>
 </div>
+<footer class="bg-pink text-white pt-5 pb-3 mt-5">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-4 mb-3">
+        <h5 class="fw-bold">About Transflower</h5>
+        <p>We provide quality tech and lifestyle products with a touch of elegance and innovation.</p>
+      </div>
+      <div class="col-md-4 mb-3">
+        <h5 class="fw-bold">Quick Links</h5>
+        <ul class="list-unstyled">
+          <li><a href="index.html" class="text-white text-decoration-none">Home</a></li>
+          <li><a href="catalog.html" class="text-white text-decoration-none">Products</a></li>
+          <li><a href="about.html" class="text-white text-decoration-none">About Us</a></li>
+          <li><a href="contact.html" class="text-white text-decoration-none">Contact</a></li>
+        </ul>
+      </div>
+      <div class="col-md-4 mb-3">
+        <h5 class="fw-bold">Connect with Us</h5>
+        <a href="#" class="text-white me-3"><i class="bi bi-facebook"></i></a>
+        <a href="#" class="text-white me-3"><i class="bi bi-twitter"></i></a>
+        <a href="#" class="text-white"><i class="bi bi-instagram"></i></a>
+        <p class="mt-3 mb-0">Email: support@transflower.in</p>
+      </div>
+    </div>
+    <hr class="border-light">
+    <div class="text-center">
+      <small>© 2025 Transflower Store. All Rights Reserved.</small>
+    </div>
+  </div>
+</footer>
 
 <!-- ================= FOOTER ================= -->
-<footer class="bg-pink text-white text-center p-3 mt-5">
-  <p>&copy; 2025 Transflower Store. Built with ❤️ using Bootstrap 5.</p>
-</footer>
+
 
 <!-- Bootstrap JS -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
