--- a/transflower-bootstrap/index.html
+++ b/transflower-bootstrap/index.html
@@ -69,7 +69,6 @@
         <li class="nav-item"><a class="nav-link" href="register.html">Register</a></li>
         <li class="nav-item"><a class="nav-link" href="login.html">Login</a></li>
 
-        <!-- Search -->
         <li class="nav-item">
           <form class="d-flex" role="search">
             <input class="form-control form-control-sm me-2" type="search"
@@ -99,7 +98,7 @@
     <div class="row g-4">
       <div class="col-md-4">
         <div class="card text-center h-100">
-          <img src="./image/red rose.jpg" class="card-img-top product-img">
+          <img src="./image/red rose.jpg" class="card-img-top product-img" alt="Red Roses">
           <div class="card-body">
             <h5 class="fw-bold">Red Roses</h5>
             <p>Elegant bouquet for special moments.</p>
@@ -110,7 +109,7 @@
 
       <div class="col-md-4">
         <div class="card text-center h-100">
-          <img src="./image/tublips.jpg" class="card-img-top product-img">
+          <img src="./image/tublips.jpg" class="card-img-top product-img" alt="Tulip Flowers">
           <div class="card-body">
             <h5 class="fw-bold">Tulip Delight</h5>
             <p>Fresh tulips to brighten your day.</p>
@@ -121,7 +120,7 @@
 
       <div class="col-md-4">
         <div class="card text-center h-100">
-          <img src="./image/sun.jpg" class="card-img-top product-img">
+          <img src="./image/sun.jpg" class="card-img-top product-img" alt="Sunflower">
           <div class="card-body">
             <h5 class="fw-bold">Sunflower Joy</h5>
             <p>Bring sunshine into your home.</p>
@@ -139,6 +138,7 @@
 
   <div id="testimonialCarousel" class="carousel slide" data-bs-ride="carousel">
     <div class="carousel-inner">
+
       <div class="carousel-item active text-center">
         <p class="mb-4">"Transflower never disappoints! My anniversary bouquet was perfect."</p>
         <footer class="blockquote-footer">Sneha K.</footer>
@@ -148,13 +148,53 @@
         <p class="mb-4">"Fresh flowers and fast delivery — simply beautiful!"</p>
         <footer class="blockquote-footer">Rahul M.</footer>
       </div>
+
     </div>
+
+    <!-- Controls -->
+    <button class="carousel-control-prev" type="button" data-bs-target="#testimonialCarousel" data-bs-slide="prev">
+      <span class="carousel-control-prev-icon"></span>
+    </button>
+    <button class="carousel-control-next" type="button" data-bs-target="#testimonialCarousel" data-bs-slide="next">
+      <span class="carousel-control-next-icon"></span>
+    </button>
   </div>
 </section>
 
 <!-- ================= FOOTER ================= -->
-<footer class="bg-pink text-white text-center py-3">
-  <p class="mb-0">&copy; 2025 Transflower Store 🌸</p>
+<footer class="bg-pink text-white pt-5">
+  <div class="container">
+    <div class="row">
+
+      <div class="col-md-4 mb-4">
+        <h5 class="fw-bold">🌼 Transflower</h5>
+        <p>Delivering fresh flowers with love and care.</p>
+      </div>
+
+      <div class="col-md-4 mb-4">
+        <h5 class="fw-bold">Quick Links</h5>
+        <ul class="list-unstyled">
+          <li><a href="index.html" class="text-white text-decoration-none">Home</a></li>
+          <li><a href="product.html" class="text-white text-decoration-none">Products</a></li>
+          <li><a href="about.html" class="text-white text-decoration-none">About</a></li>
+          <li><a href="contact.html" class="text-white text-decoration-none">Contact</a></li>
+        </ul>
+      </div>
+
+      <div class="col-md-4 mb-4">
+        <h5 class="fw-bold">Connect With Us</h5>
+        <p>Email: support@transflower.com</p>
+        <p>Phone: +91 98765 43210</p>
+      </div>
+
+    </div>
+
+    <hr class="border-light">
+
+    <div class="text-center pb-3">
+      © 2025 Transflower Store | Designed by <strong>Sachin Kharat</strong>
+    </div>
+  </div>
 </footer>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
