Changes footer site

--- a/transflower-bootstrap/contact.html
+++ b/transflower-bootstrap/contact.html
@@ -112,7 +112,7 @@
 
 <!-- ================= FOOTER ================= -->
 <footer class="bg-pink text-white text-center p-3">
-  <p class="mb-0">&copy; 2025 Transflower Store. Built with ❤️ using Bootstrap 5.</p>
+  <p class="mb-0">&copy; 2025 Transflower Store | Designed by <strong>Sachin Kharat</strong></p>
 </footer>
 
 <!-- ================= JS ================= -->
