--- a/transflower-bootstrap/index.html
+++ b/transflower-bootstrap/index.html
@@ -8,17 +8,13 @@
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
 
-  <!-- Custom CSS -->
+  <!-- Custom Styles -->
   <style>
-    html, body {
-      height: 100%;
-      margin: 0;
-    }
-
     body {
       font-family: 'Segoe UI', sans-serif;
+      min-height: 100vh;
       background: url("https://i.pinimg.com/736x/1a/80/c4/1a80c4fab193890f7f9fa0ff2d157acc.jpg")
-                  no-repeat center center/cover;
+        no-repeat center / cover;
     }
 
     .bg-pink {
@@ -26,7 +22,7 @@
     }
 
     .hero-section {
-      background: rgba(255, 255, 255, 0.8);
+      background: rgba(255, 255, 255, 0.75);
       backdrop-filter: blur(6px);
     }
 
@@ -38,8 +34,8 @@
     .card {
       border: none;
       border-radius: 20px;
-      background: rgba(255, 255, 255, 0.95);
-      transition: 0.3s ease;
+      background: rgba(255, 255, 255, 0.9);
+      transition: all 0.3s ease;
     }
 
     .card:hover {
@@ -61,7 +57,7 @@
     </button>
 
     <div class="collapse navbar-collapse" id="navbarNav">
-      <ul class="navbar-nav ms-auto align-items-lg-center gap-2">
+      <ul class="navbar-nav ms-auto gap-2">
         <li class="nav-item"><a class="nav-link active" href="index.html">Home</a></li>
         <li class="nav-item"><a class="nav-link" href="product.html">Products</a></li>
         <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
@@ -77,7 +73,7 @@
 <section class="hero-section text-center py-5">
   <div class="container">
     <h1 class="fw-bold">Welcome to Transflower Store</h1>
-    <p class="lead">Fresh flowers delivered with love & care.</p>
+    <p class="lead">Beautiful flowers, delivered fresh to your doorstep.</p>
     <a href="product.html" class="btn btn-primary btn-lg mt-3">Shop Now</a>
   </div>
 </section>
@@ -85,41 +81,38 @@
 <!-- ================= PRODUCTS ================= -->
 <section class="py-5">
   <div class="container">
-    <h2 class="text-center fw-bold mb-5">Our Featured Flowers</h2>
+    <h2 class="text-center mb-5 fw-bold">Our Featured Flowers</h2>
 
     <div class="row g-4">
-      <!-- Product 1 -->
       <div class="col-md-4">
-        <div class="card h-100 text-center">
+        <div class="card text-center h-100">
           <img src="./image/red rose.jpg" class="card-img-top product-img" alt="Red Roses">
           <div class="card-body">
             <h5 class="fw-bold">Red Roses</h5>
             <p>Elegant bouquet for special moments.</p>
-            <a href="#" class="btn btn-primary">Buy Now</a>
+            <button class="btn btn-primary">Buy Now</button>
           </div>
         </div>
       </div>
 
-      <!-- Product 2 -->
       <div class="col-md-4">
-        <div class="card h-100 text-center">
-          <img src="./image/tublips.jpg" class="card-img-top product-img" alt="Tulips">
+        <div class="card text-center h-100">
+          <img src="./image/tublips.jpg" class="card-img-top product-img" alt="Tulip Flowers">
           <div class="card-body">
             <h5 class="fw-bold">Tulip Delight</h5>
             <p>Fresh tulips to brighten your day.</p>
-            <a href="#" class="btn btn-primary">Buy Now</a>
+            <button class="btn btn-primary">Buy Now</button>
           </div>
         </div>
       </div>
 
-      <!-- Product 3 -->
       <div class="col-md-4">
-        <div class="card h-100 text-center">
+        <div class="card text-center h-100">
           <img src="./image/sun.jpg" class="card-img-top product-img" alt="Sunflower">
           <div class="card-body">
             <h5 class="fw-bold">Sunflower Joy</h5>
             <p>Bring sunshine into your home.</p>
-            <a href="#" class="btn btn-primary">Buy Now</a>
+            <button class="btn btn-primary">Buy Now</button>
           </div>
         </div>
       </div>
@@ -129,7 +122,7 @@
 
 <!-- ================= TESTIMONIALS ================= -->
 <section class="container my-5">
-  <h2 class="text-center mb-4">What Our Customers Say</h2>
+  <h2 class="text-center mb-4 fw-bold">What Our Customers Say</h2>
 
   <div id="testimonialCarousel" class="carousel slide" data-bs-ride="carousel">
     <div class="carousel-inner text-center">
@@ -149,6 +142,7 @@
     <button class="carousel-control-prev" type="button" data-bs-target="#testimonialCarousel" data-bs-slide="prev">
       <span class="carousel-control-prev-icon"></span>
     </button>
+
     <button class="carousel-control-next" type="button" data-bs-target="#testimonialCarousel" data-bs-slide="next">
       <span class="carousel-control-next-icon"></span>
     </button>
@@ -156,15 +150,41 @@
 </section>
 
 <!-- ================= FOOTER ================= -->
-<footer class="bg-pink text-white pt-4">
-  <div class="container text-center">
-    <p class="mb-1">© 2025 Transflower Store</p>
-    <p class="mb-0">Designed by <strong>Sachin Kharat</strong></p>
+<footer class="bg-pink text-white pt-5">
+  <div class="container">
+    <div class="row">
+
+      <div class="col-md-4">
+        <h5 class="fw-bold">🌼 Transflower</h5>
+        <p>Delivering fresh flowers with love and care.</p>
+      </div>
+
+      <div class="col-md-4">
+        <h5 class="fw-bold">Quick Links</h5>
+        <ul class="list-unstyled">
+          <li><a href="index.html" class="text-white text-decoration-none">Home</a></li>
+          <li><a href="product.html" class="text-white text-decoration-none">Products</a></li>
+          <li><a href="about.html" class="text-white text-decoration-none">About</a></li>
+          <li><a href="contact.html" class="text-white text-decoration-none">Contact</a></li>
+        </ul>
+      </div>
+
+      <div class="col-md-4">
+        <h5 class="fw-bold">Contact</h5>
+        <p>Email: support@transflower.com</p>
+        <p>Phone: +91 98765 43210</p>
+      </div>
+
+    </div>
+
+    <hr class="border-light">
+
+    <div class="text-center pb-3">
+      © 2025 Transflower Store | Designed by <strong>Sachin Kharat</strong>
+    </div>
   </div>
 </footer>
 
-<!-- Bootstrap JS -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
-
 </body>
 </html>
