--- a/transflower-bootstrap/about.html
+++ b/transflower-bootstrap/about.html
@@ -8,6 +8,9 @@
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
 
+  <!-- Bootstrap Icons (WhatsApp icon साठी) -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css">
+
   <style>
     html, body {
       height: 100%;
@@ -26,6 +29,10 @@
     /* Pink Theme */
     .bg-pink {
       background-color: #d63384 !important;
+    }
+
+    .text-pink {
+      color: #d63384;
     }
 
     .btn-pink {
@@ -98,6 +105,8 @@
     </div>
   </div>
 </div>
+
+<!-- ================= FOOTER ================= -->
 <footer class="bg-pink text-white pt-5 pb-3 mt-5">
   <div class="container">
     <div class="row">
@@ -105,6 +114,7 @@
         <h5 class="fw-bold">About Transflower</h5>
         <p>We provide quality tech and lifestyle products with a touch of elegance and innovation.</p>
       </div>
+
       <div class="col-md-4 mb-3">
         <h5 class="fw-bold">Quick Links</h5>
         <ul class="list-unstyled">
@@ -114,23 +124,35 @@
           <li><a href="contact.html" class="text-white text-decoration-none">Contact</a></li>
         </ul>
       </div>
+
       <div class="col-md-4 mb-3">
         <h5 class="fw-bold">Connect with Us</h5>
+
         <a href="#" class="text-white me-3"><i class="bi bi-facebook"></i></a>
         <a href="#" class="text-white me-3"><i class="bi bi-twitter"></i></a>
         <a href="#" class="text-white"><i class="bi bi-instagram"></i></a>
-        <p class="mt-3 mb-0">Email: support@transflower.in</p>
+
+        <p class="mt-3 mb-0">Email: kharatsachin012@gmail.com</p>
+
+        <!-- WhatsApp Auto Chat Link -->
+        <p class="mt-3 mb-0">
+          <a href="https://wa.me/919637661382?text=Hello%20I%20want%20to%20order%20flowers" 
+             target="_blank" 
+             class="text-white text-decoration-none">
+            <i class="bi bi-whatsapp"></i> Chat on WhatsApp (9637661382)
+          </a>
+        </p>
+
       </div>
     </div>
+
     <hr class="border-light">
+
     <div class="text-center">
       <small>© 2025 Transflower Store. All Rights Reserved.</small>
     </div>
   </div>
 </footer>
-
-<!-- ================= FOOTER ================= -->
-
 
 <!-- Bootstrap JS -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
