--- a/transflower-bootstrap/index.html
+++ b/transflower-bootstrap/index.html
@@ -8,6 +8,9 @@
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
 
+  <!-- Bootstrap Icons (WhatsApp icon साठी) -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css">
+
   <!-- Custom Styles -->
   <style>
     body {
@@ -171,8 +174,16 @@
 
       <div class="col-md-4">
         <h5 class="fw-bold">Contact</h5>
-        <p>Email: support@transflower.com</p>
-        <p>Phone: +91 98765 43210</p>
+        <p>Email: kharatsachin012.com</p>
+
+        <!-- WhatsApp Auto Link -->
+        <p>
+          <a href="https://wa.me/919637661382?text=Hello%20I%20want%20to%20order%20flowers"
+             target="_blank"
+             class="text-white text-decoration-none">
+            <i class="bi bi-whatsapp"></i> Chat on WhatsApp (9637661382)
+          </a>
+        </p>
       </div>
 
     </div>
