modifiedn all files

--- a/transflower-bootstrap/contact.html
+++ b/transflower-bootstrap/contact.html
@@ -85,17 +85,17 @@
 
           <form id="contactForm">
             <div class="mb-3">
-              <label class="form-label fw-semibold">Your Name</label>
+              <label class="form-label fw-semibold">Your Name :</label>
               <input type="text" class="form-control" placeholder="Enter your name" required>
             </div>
 
             <div class="mb-3">
-              <label class="form-label fw-semibold">Email</label>
+              <label class="form-label fw-semibold">Email :</label>
               <input type="email" class="form-control" placeholder="Enter your email" required>
             </div>
 
             <div class="mb-3">
-              <label class="form-label fw-semibold">Message</label>
+              <label class="form-label fw-semibold">Message:</label>
               <textarea class="form-control" rows="4" placeholder="Write your message" required></textarea>
             </div>
 
@@ -103,7 +103,15 @@
               🌺 Send Message
             </button>
           </form>
+   </form>
 
+          <a href="https://wa.me/919637661382"
+             class="btn btn-success w-100 mt-3">
+            <i class="bi bi-whatsapp"></i> Chat on WhatsApp
+          </a>
+
+        </div>
+      </div>
         </div>
       </div>
     </div>
