--- a/transflower-bootstrap/index.html
+++ b/transflower-bootstrap/index.html
@@ -70,6 +70,12 @@
       </ul>
     </div>
   </div>
+   <form class="d-flex ms-3">
+        <input class="form-control" type="search" placeholder="Search flowers">
+      </form>
+    </div>
+  </div>
+</nav>
 </nav>
 
 <!-- ================= HERO SECTION ================= -->
