--- a/transflower-bootstrap/register.html
+++ b/transflower-bootstrap/register.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Transflower Store - Register</title>
+  <title>Register | Transflower Store</title>
 
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -11,24 +11,43 @@
   <style>
     body {
       font-family: 'Segoe UI', sans-serif;
-      background: url("https://i.pinimg.com/736x/1a/80/c4/1a80c4fab193890f7f9fa0ff2d157acc.jpg") no-repeat center center fixed;
+      background: url("https://i.pinimg.com/736x/1a/80/c4/1a80c4fab193890f7f9fa0ff2d157acc.jpg");
       background-size: cover;
+      background-position: center;
+      background-attachment: fixed;
     }
 
     .bg-pink {
-      background-color: #d63384 !important;
+      background-color: #e83e8c;
     }
 
-    .text-pink {
-      color: #d63384;
+    .register-card {
+      background: rgba(255,255,255,0.9);
+      backdrop-filter: blur(10px);
+      border-radius: 20px;
+      box-shadow: 0 15px 30px rgba(0,0,0,0.2);
+    }
+
+    .btn-pink {
+      background-color: #e83e8c;
+      color: white;
+      border-radius: 12px;
+    }
+
+    .btn-pink:hover {
+      background-color: #d63384;
+    }
+
+    .form-control {
+      border-radius: 12px;
     }
   </style>
 </head>
 
 <body>
 
-<!-- ✅ Navbar -->
-<nav class="navbar navbar-expand-lg navbar-dark bg-pink">
+<!-- ================= NAVBAR ================= -->
+<nav class="navbar navbar-expand-lg navbar-dark bg-pink shadow">
   <div class="container">
     <a class="navbar-brand fw-bold" href="index.html">🌼 Transflower</a>
 
@@ -48,88 +67,105 @@
   </div>
 </nav>
 
-<!-- ✅ Success Alert -->
-<div class="container mt-3">
-  <div class="alert alert-success alert-dismissible fade show" role="alert">
-    <strong>Success!</strong> You have registered successfully.
-    <button type="button" class="btn-close" data-bs-dismiss="alert"></button>
-  </div>
-</div>
+<!-- ================= REGISTER SECTION ================= -->
+<section class="py-5">
+  <div class="container">
+    <div class="row justify-content-center">
+      <div class="col-md-6">
 
-<!-- ✅ Registration Form -->
-<div class="container my-5">
-  <div class="row justify-content-center">
-    <div class="col-md-6">
-      <div class="card shadow-lg">
-        <div class="card-header bg-danger text-white text-center">
-          <h4>🌸 Create Your Account</h4>
-        </div>
+        <div class="register-card p-4">
 
-        <div class="card-body p-4">
-          <form novalidate>
-            
+          <h3 class="text-center fw-bold mb-4">🌸 Create Account</h3>
+
+          <!-- Success Message -->
+          <div id="successAlert" class="alert alert-success d-none text-center">
+            ✅ Registration Successful!
+          </div>
+
+          <form id="registerForm" novalidate>
+
             <div class="mb-3">
-              <label class="form-label">First Name</label>
+              <label class="form-label fw-semibold">First Name</label>
               <input type="text" class="form-control" required>
-              <div class="invalid-feedback">Please enter your first name.</div>
+              <div class="invalid-feedback">Enter first name</div>
             </div>
 
             <div class="mb-3">
-              <label class="form-label">Last Name</label>
+              <label class="form-label fw-semibold">Last Name</label>
               <input type="text" class="form-control" required>
-              <div class="invalid-feedback">Please enter your last name.</div>
+              <div class="invalid-feedback">Enter last name</div>
             </div>
 
             <div class="mb-3">
-              <label class="form-label">Email Address</label>
+              <label class="form-label fw-semibold">Email</label>
               <input type="email" class="form-control" required>
-              <div class="invalid-feedback">Please provide a valid email.</div>
+              <div class="invalid-feedback">Enter valid email</div>
             </div>
 
             <div class="mb-3">
-              <label class="form-label">Password</label>
+              <label class="form-label fw-semibold">Password</label>
               <input type="password" class="form-control" minlength="6" required>
-              <div class="invalid-feedback">Password must be at least 6 characters.</div>
+              <div class="invalid-feedback">Minimum 6 characters</div>
+            </div>
+
+            <div class="mb-3">
+              <label class="form-label fw-semibold">Confirm Password</label>
+              <input type="password" class="form-control" required>
+              <div class="invalid-feedback">Confirm password</div>
             </div>
 
             <div class="mb-3 form-check">
               <input type="checkbox" class="form-check-input" required>
-              <label class="form-check-label">I agree to the Terms & Conditions</label>
-              <div class="invalid-feedback">You must agree before submitting.</div>
+              <label class="form-check-label">
+                I agree to Terms & Conditions
+              </label>
+              <div class="invalid-feedback">You must agree</div>
             </div>
 
-            <button type="submit" class="btn btn-danger w-100">Register</button>
+            <button type="submit" class="btn btn-pink w-100 fw-bold">
+              Register Now
+            </button>
 
-            <p class="mt-3 text-center">
+            <p class="text-center mt-3">
               Already have an account?
-              <a href="login.html" class="text-danger fw-semibold">Login here</a>
+              <a href="login.html" class="fw-bold text-decoration-none text-danger">
+                Login
+              </a>
             </p>
 
           </form>
         </div>
+
       </div>
     </div>
   </div>
-</div>
+</section>
 
-<!-- ✅ Bootstrap Validation Script -->
+<!-- ================= FOOTER ================= -->
+<footer class="bg-pink text-white text-center p-3">
+  <p class="mb-0">&copy; 2025 Transflower Store | Designed by <strong>Sachin Kharat</strong></p>
+</footer>
+
+<!-- ================= JS ================= -->
 <script>
-(() => {
-  'use strict';
-  const forms = document.querySelectorAll('form');
-  Array.from(forms).forEach(form => {
-    form.addEventListener('submit', event => {
-      if (!form.checkValidity()) {
-        event.preventDefault();
-        event.stopPropagation();
-      }
-      form.classList.add('was-validated');
-    });
-  });
-})();
+const form = document.getElementById("registerForm");
+const alertBox = document.getElementById("successAlert");
+
+form.addEventListener("submit", function(e) {
+  e.preventDefault();
+
+  if (!form.checkValidity()) {
+    e.stopPropagation();
+  } else {
+    alertBox.classList.remove("d-none");
+    form.reset();
+    form.classList.remove("was-validated");
+  }
+
+  form.classList.add("was-validated");
+});
 </script>
 
-<!-- Bootstrap JS -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 
 </body>
