--- a/transflower-bootstrap/product.html
+++ b/transflower-bootstrap/product.html
@@ -318,7 +318,7 @@
 
   <!-- ================= FOOTER ================= -->
  <footer class="bg-pink text-white text-center p-3 mt-5">
-  <p>&copy; 2025 Transflower Store. Built with ❤️ using Bootstrap 5.</p>
+  <p>&copy; 2025 Transflower Store. Built with ❤️ Sachin Kharat</p>
 </footer>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
