--- a/transflower-bootstrap/about.html
+++ b/transflower-bootstrap/about.html
@@ -3,79 +3,37 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Transflower Store</title>
+  <title>About | Transflower</title>
 
-  <!-- Bootstrap CSS -->
+  <!-- Fonts -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,400;0,600;1,400&family=DM+Sans:wght@400;500;600&display=swap" rel="stylesheet">
+
+  <!-- Bootstrap & Icons -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
-
-  <!-- Bootstrap Icons (WhatsApp icon साठी) -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css">
 
-  <style>
-    html, body {
-      height: 100%;
-      margin: 0;
-    }
-
-    body {
-      font-family: 'Segoe UI', sans-serif;
-      min-height: 100vh;
-      background-image: url("https://i.pinimg.com/736x/1a/80/c4/1a80c4fab193890f7f9fa0ff2d157acc.jpg");
-      background-size: cover;
-      background-position: center;
-      background-repeat: no-repeat;
-    }
-
-    /* Pink Theme */
-    .bg-pink {
-      background-color: #d63384 !important;
-    }
-
-    .text-pink {
-      color: #d63384;
-    }
-
-    .btn-pink {
-      background-color: #d63384;
-      color: white;
-      border-radius: 30px;
-      padding: 8px 22px;
-    }
-
-    .btn-pink:hover {
-      background-color: #ad2168;
-      color: #ffd6e7;
-    }
-
-    /* About section glass effect */
-    .about-section {
-      background: rgba(255, 255, 255, 0.85);
-      backdrop-filter: blur(6px);
-      border-radius: 20px;
-      padding: 30px;
-    }
-
-    footer {
-      background-color: #d63384;
-    }
-  </style>
+  <!-- Custom theme -->
+  <link rel="stylesheet" href="style.css">
 </head>
 
-<body>
+<body class="page-about">
 
 <!-- ================= NAVBAR ================= -->
-<nav class="navbar navbar-expand-lg navbar-dark bg-pink">
+<nav class="navbar navbar-expand-lg">
   <div class="container">
-    <a class="navbar-brand fw-bold" href="index.html">🌼 Transflower</a>
+    <a class="navbar-brand" href="index.html">Transflower</a>
 
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
       <span class="navbar-toggler-icon"></span>
     </button>
 
     <div class="collapse navbar-collapse" id="navbarNav">
-      <ul class="navbar-nav ms-auto">
-        <li class="nav-item"><a class="nav-link active" href="index.html">Home</a></li>
-        <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
+      <ul class="navbar-nav ms-auto align-items-center gap-3">
+        <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+        <li class="nav-item"><a class="nav-link active" href="about.html">About</a></li>
+        <li class="nav-item"><a class="nav-link" href="product.html">Products</a></li>
         <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
         <li class="nav-item"><a class="nav-link" href="register.html">Register</a></li>
         <li class="nav-item"><a class="nav-link" href="login.html">Login</a></li>
@@ -84,72 +42,122 @@
   </div>
 </nav>
 
-<!-- ================= ABOUT SECTION ================= -->
-<div class="container my-5">
-  <h2 class="text-center text-pink mb-4">About Transflower Store</h2>
+<!-- ================= ABOUT HERO ================= -->
+<section class="py-5">
+  <div class="container">
+    <div class="row align-items-center g-4">
+      <div class="col-lg-6">
+        <p class="section-label">Our Story</p>
+        <h2 class="section-title">Where every stem tells a story</h2>
+        <p class="text-muted mb-3">
+          Transflower began with a simple idea: make it effortless to send beautifully curated flowers
+          that feel personal, modern, and timeless.
+        </p>
+        <p class="text-muted mb-4">
+          Since 2020, we have crafted thousands of bespoke arrangements for birthdays, anniversaries,
+          weddings, and everyday “just because” moments all over India. Every bouquet is hand-tied and
+          checked stem by stem to ensure it arrives as beautiful as you imagined.
+        </p>
+        <div class="row g-3">
+          <div class="col-6">
+            <div class="p-3 rounded-4 bg-white shadow-sm h-100">
+              <h5 class="mb-1">10,000+</h5>
+              <p class="text-muted mb-0">Orders delivered with love.</p>
+            </div>
+          </div>
+          <div class="col-6">
+            <div class="p-3 rounded-4 bg-white shadow-sm h-100">
+              <h5 class="mb-1">Same‑day</h5>
+              <p class="text-muted mb-0">Delivery available in major cities.</p>
+            </div>
+          </div>
+        </div>
+      </div>
 
-  <div class="row align-items-center about-section shadow-lg">
-    <div class="col-md-6 mb-3 mb-md-0">
-      <img src="./image/tfl store.jpeg" class="img-fluid rounded shadow" alt="About Transflower">
-    </div>
-
-    <div class="col-md-6">
-      <p>
-        <strong>Transflower Store</strong> is a leading online flower and gift retailer known for creativity and quality.
-        We believe in spreading joy through nature’s beauty.
-      </p>
-      <p>
-        Founded in 2020, we have delivered happiness to over <strong>10,000+</strong> customers across India.
-        Every bouquet, plant, or hamper is handpicked with love.
-      </p>
+      <div class="col-lg-6">
+        <div class="glass-card">
+          <img src="./image/tfl store.jpeg" class="img-fluid rounded-4 mb-3" alt="Transflower studio">
+          <p class="mb-0 text-muted">
+            Our floral studio blends classic techniques with a contemporary aesthetic. We obsess over color
+            palettes, textures, and seasonal stems so your arrangements feel fresh, intentional, and one‑of‑a‑kind.
+          </p>
+        </div>
+      </div>
     </div>
   </div>
-</div>
+</section>
 
-<!-- ================= FOOTER ================= -->
-<footer class="bg-pink text-white pt-5 pb-3 mt-5">
+<!-- ================= VALUES ================= -->
+<section class="pt-0 pb-5">
   <div class="container">
-    <div class="row">
-      <div class="col-md-4 mb-3">
-        <h5 class="fw-bold">About Transflower</h5>
-        <p>We provide quality tech and lifestyle products with a touch of elegance and innovation.</p>
-      </div>
-
-      <div class="col-md-4 mb-3">
-        <h5 class="fw-bold">Quick Links</h5>
-        <ul class="list-unstyled">
-          <li><a href="index.html" class="text-white text-decoration-none">Home</a></li>
-          <li><a href="catalog.html" class="text-white text-decoration-none">Products</a></li>
-          <li><a href="about.html" class="text-white text-decoration-none">About Us</a></li>
-          <li><a href="contact.html" class="text-white text-decoration-none">Contact</a></li>
-        </ul>
-      </div>
-
-      <div class="col-md-4 mb-3">
-        <h5 class="fw-bold">Connect with Us</h5>
-
-        <a href="#" class="text-white me-3"><i class="bi bi-facebook"></i></a>
-        <a href="#" class="text-white me-3"><i class="bi bi-twitter"></i></a>
-        <a href="#" class="text-white"><i class="bi bi-instagram"></i></a>
-
-        <p class="mt-3 mb-0">Email: kharatsachin012@gmail.com</p>
-
-        <!-- WhatsApp Auto Chat Link -->
-        <p class="mt-3 mb-0">
-          <a href="https://wa.me/919637661382?text=Hello%20I%20want%20to%20order%20flowers" 
-             target="_blank" 
-             class="text-white text-decoration-none">
-            <i class="bi bi-whatsapp"></i> Chat on WhatsApp (9637661382)
-          </a>
-        </p>
-
+    <div class="row text-center mb-4">
+      <div class="col">
+        <p class="section-label">What we believe</p>
+        <h2 class="section-title">Petals with purpose</h2>
       </div>
     </div>
 
-    <hr class="border-light">
+    <div class="row g-4">
+      <div class="col-md-4">
+        <div class="glass-card h-100">
+          <h5>Thoughtful Design</h5>
+          <p class="text-muted mb-0">
+            Every arrangement is designed by our in‑house florists to balance color, texture, and shape.
+          </p>
+        </div>
+      </div>
+      <div class="col-md-4">
+        <div class="glass-card h-100">
+          <h5>Freshness First</h5>
+          <p class="text-muted mb-0">
+            We source directly from trusted growers so your flowers last longer in every vase.
+          </p>
+        </div>
+      </div>
+      <div class="col-md-4">
+        <div class="glass-card h-100">
+          <h5>Seamless Experience</h5>
+          <p class="text-muted mb-0">
+            Simple ordering, timely delivery, and clear communication—so you can focus on the moment.
+          </p>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
 
-    <div class="text-center">
-      <small>© 2025 Transflower Store. All Rights Reserved.</small>
+<!-- ================= FOOTER ================= -->
+<footer>
+  <div class="container">
+    <div class="row">
+      <div class="col-md-4 mb-4 mb-md-0">
+        <h5>Transflower</h5>
+        <p class="opacity-75 mb-0">
+          Modern floral design studio crafting meaningful arrangements for every occasion.
+        </p>
+      </div>
+      <div class="col-md-4 mb-4 mb-md-0">
+        <h5>Quick Links</h5>
+        <ul class="list-unstyled">
+          <li><a href="index.html">Home</a></li>
+          <li><a href="product.html">Products</a></li>
+          <li><a href="about.html">About</a></li>
+          <li><a href="contact.html">Contact</a></li>
+        </ul>
+      </div>
+      <div class="col-md-4">
+        <h5>Connect</h5>
+        <p class="opacity-75 mb-2">Email: kharatsachin012.com</p>
+        <a href="https://wa.me/919637661382?text=Hello%20I%20want%20to%20order%20flowers" target="_blank"
+           class="btn btn-success whatsapp-btn w-auto px-3">
+          <i class="bi bi-whatsapp"></i>
+          <span>Chat on WhatsApp</span>
+        </a>
+      </div>
+    </div>
+
+    <div class="footer-bottom text-center">
+      © 2025 Transflower Store — Designed by <strong>Sachin Kharat</strong>
     </div>
   </div>
 </footer>
