--- a/transflower-bootstrap/contact.html
+++ b/transflower-bootstrap/contact.html
@@ -5,60 +5,34 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Contact Us | Transflower</title>
 
-  <!-- Bootstrap CSS -->
+  <!-- Fonts -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,400;0,600;1,400&family=DM+Sans:wght@400;500;600&display=swap" rel="stylesheet">
+
+  <!-- Bootstrap & Icons -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css">
 
-  <style>
-    body {
-      font-family: 'Segoe UI', sans-serif;
-      background: url("https://i.pinimg.com/736x/1a/80/c4/1a80c4fab193890f7f9fa0ff2d157acc.jpg");
-      background-size: cover;
-      background-position: center;
-      background-attachment: fixed;
-    }
-
-    .bg-pink {
-      background-color: #e83e8c;
-    }
-
-    .contact-card {
-      background: rgba(255, 255, 255, 0.85);
-      backdrop-filter: blur(10px);
-      border-radius: 20px;
-      padding: 30px;
-      box-shadow: 0 15px 30px rgba(0,0,0,0.2);
-    }
-
-    .form-control {
-      border-radius: 12px;
-    }
-
-    .btn-pink {
-      background-color: #e83e8c;
-      color: white;
-      border-radius: 12px;
-    }
-
-    .btn-pink:hover {
-      background-color: #d63384;
-    }
-  </style>
+  <!-- Custom theme -->
+  <link rel="stylesheet" href="style.css">
 </head>
 
-<body>
+<body class="page-contact">
 
 <!-- ================= NAVBAR ================= -->
-<nav class="navbar navbar-expand-lg navbar-dark bg-pink shadow">
+<nav class="navbar navbar-expand-lg">
   <div class="container">
-    <a class="navbar-brand fw-bold" href="index.html">🌼 Transflower</a>
+    <a class="navbar-brand" href="index.html">Transflower</a>
 
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
       <span class="navbar-toggler-icon"></span>
     </button>
 
     <div class="collapse navbar-collapse" id="navbarNav">
-      <ul class="navbar-nav ms-auto">
+      <ul class="navbar-nav ms-auto align-items-center gap-3">
         <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+        <li class="nav-item"><a class="nav-link" href="product.html">Products</a></li>
         <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
         <li class="nav-item"><a class="nav-link active" href="contact.html">Contact</a></li>
         <li class="nav-item"><a class="nav-link" href="register.html">Register</a></li>
@@ -69,49 +43,56 @@
 </nav>
 
 <!-- ================= CONTACT SECTION ================= -->
-<section class="py-5">
+<section class="py-5" style="min-height: 80vh;">
   <div class="container">
-    <h2 class="text-center fw-bold text-dark mb-4">
-      🌸 Get in Touch With Us
-    </h2>
+    <div class="row justify-content-center mb-4">
+      <div class="col-lg-8 text-center">
+        <p class="section-label">We’re here for you</p>
+        <h2 class="section-title">Contact Transflower</h2>
+        <p class="text-muted">
+          Have a custom bouquet request, event inquiry, or question about your order?
+          Send us a message and we’ll respond as soon as possible.
+        </p>
+      </div>
+    </div>
 
     <div class="row justify-content-center">
-      <div class="col-md-6">
-        <div class="contact-card">
-
-          <div id="successAlert" class="alert alert-success d-none text-center">
-            ✅ Thank you! Your message has been sent successfully.
+      <div class="col-md-7 col-lg-6">
+        <div class="glass-card">
+          <div id="successAlert" class="alert alert-success d-none text-center mb-3">
+            Thank you! Your message has been sent.
           </div>
 
-          <form id="contactForm">
+          <form id="contactForm" novalidate>
             <div class="mb-3">
-              <label class="form-label fw-semibold">Your Name :</label>
-              <input type="text" class="form-control" placeholder="Enter your name" required>
+              <label class="form-label fw-semibold">Your name</label>
+              <input type="text" class="form-control form-control-rounded" placeholder="Enter your name" required>
+              <div class="invalid-feedback">Please enter your name.</div>
             </div>
 
             <div class="mb-3">
-              <label class="form-label fw-semibold">Email :</label>
-              <input type="email" class="form-control" placeholder="Enter your email" required>
+              <label class="form-label fw-semibold">Email address</label>
+              <input type="email" class="form-control form-control-rounded" placeholder="Enter your email" required>
+              <div class="invalid-feedback">Please enter a valid email.</div>
             </div>
 
             <div class="mb-3">
-              <label class="form-label fw-semibold">Message:</label>
-              <textarea class="form-control" rows="4" placeholder="Write your message" required></textarea>
+              <label class="form-label fw-semibold">Message</label>
+              <textarea class="form-control" rows="4" placeholder="Tell us how we can help" required></textarea>
+              <div class="invalid-feedback">Please write a message.</div>
             </div>
 
-            <button type="submit" class="btn btn-pink w-100 fw-bold">
-              🌺 Send Message
+            <button type="submit" class="btn btn-rose w-100 mb-3">
+              Send Message
             </button>
+
+            <a href="https://wa.me/919637661382?text=Hello%20I%20want%20to%20order%20flowers"
+               target="_blank"
+               class="btn btn-success whatsapp-btn w-100">
+              <i class="bi bi-whatsapp"></i>
+              <span>Chat on WhatsApp</span>
+            </a>
           </form>
-   </form>
-
-          <a href="https://wa.me/919637661382"
-             class="btn btn-success w-100 mt-3">
-            <i class="bi bi-whatsapp"></i> Chat on WhatsApp
-          </a>
-
-        </div>
-      </div>
         </div>
       </div>
     </div>
@@ -119,19 +100,56 @@
 </section>
 
 <!-- ================= FOOTER ================= -->
-<footer class="bg-pink text-white text-center p-3">
-  <p class="mb-0">&copy; 2025 Transflower Store | Designed by <strong>Sachin Kharat</strong></p>
+<footer>
+  <div class="container">
+    <div class="row">
+      <div class="col-md-4 mb-4 mb-md-0">
+        <h5>Transflower</h5>
+        <p class="opacity-75 mb-0">From everyday moments to grand celebrations, we design flowers that speak for you.</p>
+      </div>
+      <div class="col-md-4 mb-4 mb-md-0">
+        <h5>Quick Links</h5>
+        <ul class="list-unstyled">
+          <li><a href="index.html">Home</a></li>
+          <li><a href="product.html">Products</a></li>
+          <li><a href="about.html">About</a></li>
+          <li><a href="contact.html">Contact</a></li>
+        </ul>
+      </div>
+      <div class="col-md-4">
+        <h5>Connect</h5>
+        <p class="opacity-75 mb-2">Email: kharatsachin012.com</p>
+        <a href="https://wa.me/919637661382?text=Hello%20I%20want%20to%20order%20flowers" target="_blank"
+           class="btn btn-success whatsapp-btn w-auto px-3">
+          <i class="bi bi-whatsapp"></i>
+          <span>WhatsApp Support</span>
+        </a>
+      </div>
+    </div>
+
+    <div class="footer-bottom text-center">
+      © 2025 Transflower Store — Designed by <strong>Sachin Kharat</strong>
+    </div>
+  </div>
 </footer>
 
 <!-- ================= JS ================= -->
 <script>
-  const form = document.getElementById("contactForm");
-  const alertBox = document.getElementById("successAlert");
+  const contactForm = document.getElementById("contactForm");
+  const contactAlert = document.getElementById("successAlert");
 
-  form.addEventListener("submit", function (e) {
+  contactForm.addEventListener("submit", function (e) {
     e.preventDefault();
-    alertBox.classList.remove("d-none");
-    form.reset();
+
+    if (!contactForm.checkValidity()) {
+      e.stopPropagation();
+    } else {
+      contactAlert.classList.remove("d-none");
+      contactForm.reset();
+      contactForm.classList.remove("was-validated");
+    }
+
+    contactForm.classList.add("was-validated");
   });
 </script>
 
